# daik-robot-arm

./: .gitignore  04_read_all_student_angle.py  05_write_all_student_angle.py  README.md  calibrate_now.py  read_eeprom_limits.py  rezero_j1.py  test_raw.py
examples/: 01_scan_servos.py  02_read_angles.py  03_slider_control.py  04_sync_move.py  05_calibrate_zero.py  06_monitor.py  07_find_limits.py  08_ik_demo.py  09_ik_to_rviz.py  10_ik_real_test.py  11_pick_place.py  12_workspace_map.py  13_draw.py
robot_arm/: __init__.py  config.py  ik_solver.py  joint_limits.json  kinematics.py  serial_protocol.py  servo.py  sync_controller.py  workspace.json  zero_offset.json
ros_ws/src/robot_arm_description/: CMakeLists.txt  package.xml
ros_ws/src/robot_arm_description/launch/: display.launch.py  gazebo.launch.py
ros_ws/src/robot_arm_description/urdf/: robot_arm.urdf
urdf/: dimensions.py  install_ros.sh
