<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_description</name>
  <version>0.1.0</version>
  <description>6-DOF robot arm URDF description for Gazebo simulation</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/urdf"/>
  </export>
</package>
